--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/r0xsh/slimp#readme",
   "dependencies": {
+    "dayjs": "^1.11.10",
     "express": "^4.18.2"
   }
 }
