--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "dayjs": "^1.11.10",
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node src/app.js"
   }
 }
